--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,11 @@ body,
 }
 
 .circle {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+}
+.circle-legend {
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
